--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
+    "mongoose": "^8.18.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
